Got table to be made and colors to change.

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,19 @@ td {
 input[type=number] {
     width: 6em;
 }
+
+
+/*
+.white-background{
+    background-color:white;
+}
+*/
+
+/*.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg .tg-yw4l{vertical-align:top}
+.tg .tg-4luf{background-color:#656565;text-align:center;vertical-align:top}
+.tg .tg-45bf{background-color:#ffcb2f;vertical-align:top}*/
+
+
